tri et filtre dans les pages html ligne cliquable reorganisation du user_controlleur

--- a/GBriceCorp/src/main/webapp/static/css/app.css
+++ b/GBriceCorp/src/main/webapp/static/css/app.css
@@ -136,6 +136,11 @@ body, .form-control {
 	height: auto;
 }
 
+.icone_liste{
+	width: 20px;
+	height: auto;	
+}
+
 .flechemenu {
 	height: 20px;
 	aligne-self: flex-end;
