--- a/GBriceCorp/src/main/webapp/static/views/Admin_AffectCli.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_AffectCli.html
@@ -1,65 +1,61 @@
 
 
-	<div
-	
+<div
 	ng-init="guests=[
 {Nom:'MoreL',Prenom:'Brice', Adresse:'24 rue Emile blandin 44400 REZE', Email:'brice_morle@hotmail.com'},
 {Nom:'dsvsv',Prenom:'dsvsv', Adresse:'24 rue Emile blandin 44400 REZE', Email:'brice_morle@hotmail.com'},
 {Nom:'MorsdvsveL',Prenom:'sdvdsvdsvdssdvdsvdsvd', Adresse:'24 rue Emile blandin 44400 REZE', Email:'brice_morle@hotmail.com'}
-]"
-	
-	>
-<div class="panel panel-info" layout="colomn">
+]
+">
+	<div class="panel panel-info" layout="colomn">
 
-	<!-- Default panel contents -->
-	<div class="panel-heading" flex>
-		<span class="lead">Nouveaux Clients en attente d'affectation </span>
-	</div>	
-	<!-- Tableau d'affichage des demandes d'ouverture -->
-
+		<!-- Default panel contents -->
+		<div class="panel-heading" flex>
+			<span class="lead">Nouveaux Clients en attente d'affectation </span>
+		</div>
+		<!-- Tableau d'affichage des demandes d'ouverture -->
 
 
 
 
-			<div class="panel-body" flex>
-				<div class="tablecontainer">
-					<table class="table table-hover">
-						<thead>
-							<tr>
-								<th ng-click="trier_par_nom()">Nom</th>
-								<th ng-click="trier_par_prenom()">Prenom</th>
-								<th ng-click="trier_par_Adresse()">Adresse</th>
-								<th ng-click="trier_par_Email()">Email</th>
-								<th width="20%">Attribution</th>
 
-							</tr>
-						</thead>
-						<tbody>
-							<tr ng-repeat="guest in guests">
-								<td>{{guest.Nom}}</td>
-								<td>{{guest.Prenom}}</td>
-								<td>{{guest.Adresse}}</td>
-								<td>{{guest.Email}}</td>
+		<div class="panel-body" flex>
+			<div class="tablecontainer">
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th ng-click="ctrl.trier_par('Nom')">Nom</th>
+							<th ng-click="ctrl.trier_par('Prenom')">Prenom</th>
+							<th ng-click="ctrl.trier_par('Adresse')">Adresse</th>
+							<th ng-click="ctrl.trier_par('Email')">Email</th>
+							<th width="20%">Attribution</th>
 
-								<td>
-<!-- 
-									<div class="formcontainer">
-		<form name="formValidation" class="form-horizontal">
-			<select class="form-control" id="sel1"
-				ng-change="validation_attribution(id.conseiller)">
-				<option value="conseiller.id" selected=selected>"conseiller actuel"</option>
-				<option ng-repeat="conseiller in ctrl.conseillers" value="conseiller.id">"conseiller.nom"</option>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="guest in guests | filter:search:strict | orderBy:tripar ">
+							<td>{{guest.Nom}}</td>
+							<td>{{guest.Prenom}}</td>
+							<td>{{guest.Adresse}}</td>
+							<td>{{guest.Email}}</td>
 
-			</select>
-		</form>
-	</div>	
-	 -->
-									</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
+							<td>
+										<div ng-init="ctrl.recherche_userParType(2);">
+									<form name="formValidation" class="form-horizontal">
+										<select class="form-control" id="sel1"
+											ng-change="validation_attribution()" ng-model="v">
+											<option value="conseiller.id" selected=selected>"conseiller	actuel"</option>
+											<option ng-repeat="conseiller in ctrl.conseillers"
+												value="{{conseiller.id}}">{{conseiller.nom}}</option>
+										</select>
+									</form>
+										</div>
+							</td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
-</div>
+		</div>
+	</div>
 </div>
 
