--- a/GBriceCorp/src/main/webapp/static/views/Cli_Virement.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_Virement.html
@@ -1,14 +1,11 @@
 
 <!-- Formulaire de demande de virement -->
-
-
-<div
-	ng-init="Comptes=[
-{Libelle:'Comptecds',Iban:'2616464', Solde:'150'},
-{Libelle:'hgdfdgfbfdb',Iban:'7587578578', Solde:'1570'},
-{Libelle:'Compfgbgfbtecds',Iban:'7857868676', Solde:'78150'},
-{Libelle:'fgbfdbgfb',Iban:'78687678676', Solde:'8150'}
-]">
+<!-- 	CompteController.compteDebiteur = compte sur lequel on retire l'argent
+		CompteController.virement() methode de virement
+		COmpteController.montant montant à virer 
+		CompteController.compteCredite  = compte reçevant l'argent -->
+<!--  j'obtiens les comptes pour les placer dans les listes -->
+<div ng-init="CompteController.getComptes();">
 <div class="panel panel-info" layout="colomn">
 
 	<!-- Default panel contents -->
@@ -19,15 +16,14 @@
 
 	<div class="panel-body" flex>
 		<div class="formcontainer">
-			<form ng-submit="ctrl.virement()" name="formVirement"
+			<form ng-submit="CompteController.virement()" name="formVirement"
 				class="form-horizontal">
-				<input type="hidden" ng-model="ctrl.user.id" />
 				<div class="row">
 					<div class="form-group col-md-12">
 						<label class="col-md-2 control-lable" for="file">Compte a debiter</label>
 						<div class="col-md-7">
-									<select ng-model="ctrl.user.debiter" name="debiter" class="form-control input-sm">
-<option name="liste_comptes" ng-repeat="Compte in Comptes">{{Compte.Libelle}} - {{Compte.Iban}} - {{Compte.Solde}}</option>
+									<select ng-model="CompteController.compteDebiteur" name="debiter" class="form-control input-sm">
+<option name="liste_comptes" ng-repeat="Compte in CompteController.comptes">{{Compte.Libelle}} - {{Compte.Iban}} - {{Compte.Solde}}</option>
 </select>
 							<div class="has-error" ng-show="formVirement">
 								<span ng-show="formConnexion.prenom.$error.required">Champ
@@ -40,8 +36,8 @@
 					<div class="form-group col-md-12">
 						<label class="col-md-2 control-lable" for="file">Compte a crediter</label>
 						<div class="col-md-7">
-							<select ng-model="ctrl.user.crediter" name="crediter" class="form-control input-sm">
-<option name="liste_comptes" ng-repeat="Compte in Comptes">{{Compte.Libelle}} - {{Compte.Iban}} - {{Compte.Solde}}</option>
+							<select ng-model="CompteController.compteCredite" name="crediter" class="form-control input-sm">
+<option name="liste_comptes" ng-repeat="Compte in CompteController.comptes">{{Compte.Libelle}} - {{Compte.Iban}} - {{Compte.Solde}}</option>
 <option name="liste_comptes" >Autre</option>
 </select>
 							<div class="has-error" ng-show="formVirement.$dirty">
@@ -55,7 +51,7 @@
 					<div class="form-group col-md-12">
 						<label class="col-md-2 control-lable" for="file">Montant a transferer</label>
 						<div class="col-md-7">
-							<input type="text" ng-model="ctrl.user.montant"
+							<input type="text" ng-model="CompteController.montant"
 								name="montant" class="form-control input-sm"
 								placeholder="Entrez votre montant" required />
 							<div class="has-error" ng-show="formVirement.$dirty">
