Rectifications sur controllers, reste probleme de "non-visibilité" du compte controller

--- a/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
@@ -1,4 +1,4 @@
-<div ng-init="CompteController.getComptes();">
+<div ng-init="CompteController.getComptes(); ctrl.getMyUserBack();">
 <div id="printSectionId">
 	<div class="panel panel-info" layout="colomn">
 
