--- a/GBriceCorp/src/main/webapp/static/views/Cli_NouvCompte.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_NouvCompte.html
@@ -1,6 +1,6 @@
 
  Veuillez sélectionner le type de compte que vous souhaitez souscrire :
-<form ng-submit="ctrl.writeDemNewCompte()" class="select.input-group-sm">
+<form ng-submit="CompteController.writeDemNewCompte()" class="select.input-group-sm">
 	<SELECT name="Type de compte" size="1">
 		<OPTION>Compte Joint rémunéré
 		<OPTION>Compte Joint non-rémunéré
