--- a/GBriceCorp/src/main/webapp/static/css/app.css
+++ b/GBriceCorp/src/main/webapp/static/css/app.css
@@ -1,5 +1,3 @@
-
-
 body {
 	display: flex;
 	background-image: url("../../static/imgs/banniere.jpg");
@@ -56,33 +54,24 @@ body, .form-control {
 }
 
 .formcontainer {
-	transition: all linear 0.5s;
+	transition: all linear 5s;
 	background-color: #DAE8E8;
 	height: auto;
-padding:20px;
+	padding: 20px;
 }
 
-
 .formcontainer.ng-hide {
-padding-bottom: 0px;
+	padding-bottom: 0px;
 	padding-top: 0px;
 	height: 0px;
 }
-
 
 .tablecontainer {
 	padding-left: 20px;
 }
 
-.webservice{
-	display:flex;
-	flex-wrap: wrap;	
-	
-}
 
 .generic-container {
-	display:flex;
-
 	margin-left: 1vw;
 	margin-right: 1vw;
 	margin-top: 1vh;
@@ -102,8 +91,8 @@ padding-bottom: 0px;
 .panel {
 	align: center;
 	width: auto;
-
 }
+
 .navbar2 {
 	align: center;
 	top: 0;
@@ -117,11 +106,10 @@ padding-bottom: 0px;
 	justify-content: space-between;
 	transition: all linear 0.5s;
 }
-.navbar2.ng-hide {
 
+.navbar2.ng-hide {
 	opacity: 0;
 }
-
 
 .navbar {
 	align: center;
@@ -137,11 +125,10 @@ padding-bottom: 0px;
 	justify-content: space-between;
 	transition: all linear 1s;
 }
-.navbar.ng-hide {
 
+.navbar.ng-hide {
 	left: -500px;
 }
-
 
 .banniere {
 	margin-left: 2vw;
@@ -149,6 +136,7 @@ padding-bottom: 0px;
 	margin-top: 5vh;
 	margin-bottom: 5vh;
 	padding-bottom: 5vw;
+		background: rgba(200, 1, 200, 0.5);
 }
 
 .session_name {
@@ -195,9 +183,4 @@ padding-bottom: 0px;
 	max-height: 150px;
 	margin: 25px;
 }
-@media (max-width: 768px) {
-    /* For mobile phones: */
-  body { @extend .ng-hide;
-  
- }
-}
+
