--- a/GBriceCorp/src/main/webapp/static/views/ConsClient_DetailCompte.html
+++ b/GBriceCorp/src/main/webapp/static/views/ConsClient_DetailCompte.html
@@ -1,7 +1,5 @@
 
-
-
-<div class=" col-xs-6">
+<div class=" generic-container col-xs-5 ">
 	<div class=" panel panel-default  ">
 
 		<div class="panel-heading ">
@@ -14,8 +12,7 @@
 		</ul>
 	</div>
 </div>
-<div class=" col-xs-6">
-
+<div class=" generic-container col-xs-5 ">
 	<div id="RIBSectionId" class=" panel panel-default ">
 		<div class="panel-heading">
 			<span class="lead">Compte courant a remuneration exponentielle
@@ -35,7 +32,7 @@
 		</ul>
 	</div>
 </div>
-<div class=" col-xs-6">
+<div class="generic-container col-xs-5">
 	<div id="ReleveSectionId" class="panel panel-default "
 		ng-init="mouvements=[
 {Libelle:'MoreL',Date:'30/11/2010', Montant:'150'},
@@ -53,7 +50,7 @@
 			</span>
 		</div>
 		<div class="tablecontainer">
-			<table class="table table-hover">
+			<table class="table table-hover ">
 				<thead>
 					<tr>
 						<th ng-click="ctrl.trier_par('Libelle')">Libelle</th>
@@ -71,9 +68,9 @@
 			</table>
 		</div>
 	</div>
-		</div>
-<div class=" col-xs-6">
-	<div class="panel panel-default "
+</div>
+<div class="generic-container col-xs-5">
+	<div class="panel panel-default  "
 		ng-init="documents=[
 {Nom:'releve impot 2010', Type:'Imposition', Datereception:'30/11/2010'},
 {Nom:'domicle', Type:'quitance', Datereception:'30/11/2011'},
